<resources>
    <string name="app_name">Practica3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Username</string>
    <string name="surname">Surname</string>
    <string name="subtext">Send</string>
    <string name="woman">woman</string>
    <string name="man">man</string>
    <string name="gender">Gender</string>
    <string name="state">Sudying</string>
    <string name="weight">Weight</string>
    <string name="submit">Submit</string>
    <string name="birthdate">Birthdate</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="other_settingss">Otro</string>
</resources>
