<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/surname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />


    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/radio_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

        <RadioButton
            android:id="@+id/radio_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/state"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thisSwitch"
            android:switchMinWidth="75dp"
          />

    </LinearLayout>


</LinearLayout>

